<?xml version="1.0" encoding="utf-8"?>
<android.support.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context="ChooseTargetActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:text="@string/choose_target_title"
            android:background="@color/black"
            android:textAlignment="center"
            android:textColor="@color/grey"
            android:textSize="@dimen/title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_space" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/button_tgt_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/button_padding">

                <TextView
                    android:id="@+id/text_tgt_1_button"
                    android:layout_width="@dimen/inline_action_button"
                    android:layout_height="@dimen/inline_action_button"
                    android:layout_gravity="center"
                    android:background="@drawable/circle"
                    android:text="@string/one"
                    android:textAlignment="center"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/title" />
            </FrameLayout>

            <Space
                android:layout_width="@dimen/horizontal_space"
                android:layout_height="match_parent" />

            <Space
                android:layout_width="@dimen/horizontal_space"
                android:layout_height="match_parent" />

            <FrameLayout
                android:id="@+id/button_tgt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/button_padding">

                <TextView
                    android:id="@+id/text_tgt_2_button"
                    android:layout_width="@dimen/inline_action_button"
                    android:layout_height="@dimen/inline_action_button"
                    android:layout_gravity="center"
                    android:background="@drawable/circle"
                    android:text="@string/two"
                    android:textAlignment="center"
                    android:textColor="@color/light_grey"
                    android:textSize="@dimen/title" />
            </FrameLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_space" />

        <LinearLayout
            android:id="@+id/button_tgt_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/button_padding"
            android:paddingTop="@dimen/button_padding">

            <ImageView
                android:layout_width="@dimen/inline_action_button"
                android:layout_height="@dimen/inline_action_button"
                android:background="@mipmap/ic_cancel"
                android:contentDescription="@string/cancel"
                 />

            <Space
                android:layout_width="@dimen/horizontal_space"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/accent"
                android:textSize="@dimen/text" />
        </LinearLayout>
    </LinearLayout>
</android.support.wear.widget.BoxInsetLayout>

